update TOML file.

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
 base = "pokemon/"
 publish = "pokemon/build/"
 command = "yarn build"
+
+# Redirects from what the browser requests to what we serve
+/home              /
+/pokemonList  /pokemonList
+# /login              /pokemonList
+# /signup              /signup
