--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@ publish = "pokemon/build/"
 command = "yarn build"
 
 # Redirects from what the browser requests to what we serve
-/home              /
+# /home              /
 /pokemonList  /pokemonList
 # /login              /pokemonList
 # /signup              /signup
