--- a/netlify.toml
+++ b/netlify.toml
@@ -4,5 +4,6 @@ publish = "pokemon/build/"
 command = "yarn build"
 
 
-/home              /
-/pokemonList  /pokemonList
+[redirects]
+'/home'              '/'
+'/pokemonList'  '/pokemonList'
