WIP remove quotes.

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,5 +5,5 @@ command = "yarn build"
 
 
 [redirects]
-'/home'              '/'
-'/pokemonList'  '/pokemonList'
+/home              /
+/pokemonList  /pokemonList
